--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,8 @@
-image::https://github.com/disroop/DisroopConanPackages/actions/workflows/build--all-conan.yml/badge.svg[] 
+image::https://github.com/disroop/DisroopConanPackages/actions/workflows/docker-build-push.yml/badge.svg[Badge, link=https://github.com/disroop/DisroopConanPackages/actions/workflows/docker-build-push.yml]
+image::https://github.com/disroop/DisroopConanPackages/actions/workflows/build--all-conan.yml/badge.svg[Badge, link=https://github.com/disroop/DisroopConanPackages/actions/workflows/build--all-conan.yml]
+image::https://github.com/disroop/DisroopConanPackages/actions/workflows/docker-build-push.yml/badge.svg[Badge, link=https://github.com/disroop/DisroopConanPackages/actions/workflows/build-and-push-all-conan.yml]
 
-image::https://github.com/disroop/DisroopConanPackages/actions/workflows/docker-build-push.yml/badge.svg[]
-
-= DisroopConanPackages
+== DisroopConanPackages
 
 This repository contains multiple conan packages and Dockerfiles to develop new C/C++ projects. This repository continuously builds all changes and pushes the conan artifacts to disroop.jfrog.io and the docker images to dockerhub.
 
